<resources>
    <string name="app_name">EcommerceApplication</string>
    <string name="welcome_to_ecommerce_app_n_a_place_to_find_what_you_love">Welcome to Ecommerce Application\n A Place to Find what you love</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Your Name</string>
    <string name="address">Address</string>
    <string name="title_activity_sign_up" />
    <string name="go_to_cart">Go To Cart</string>
    <string name="product_title">Title</string>
    <string name="rating">Rating</string>
    <string name="discription">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="cartItem">Cart</string>
    <string name="goexploretheapp">Start</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="description_of_cart_item">Description\n</string>
    <string name="count_button">Count</string>
    <string name="card_number">Enter Your Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="pay">Pay Now</string>
    <string name="cvv">Cvv</string>
    <string name="price">Price</string>
    <string name="order_has_been_placed">Your Order Has Been Placed.</string>
    <string name="click_here">Click Here</string>
    <string name="logout">Logout</string>
    <string name="click_here_to_go_home"><![CDATA[Click Here >>Home]]></string>
    <string name="username">Username</string>
    <string name="carts_0">(0)</string>
    <string name="cartZero_0">(0)</string>
    <string name="mm_yy">MM/YY</string>
    <string name="plus">+</string>
    <string name="remove">Remove</string>
    <string name="add">+</string>
    <string name="delete">-</string>
    <string name="todo">TODO</string>
</resources>