<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkoutList"
    android:layout_width="match_parent"
    android:layout_height="250sp"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageViewForCart"
            android:layout_width="158dp"
            android:layout_height="232dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:layout_width="218dp"
            android:layout_height="233dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/descriptionTextViewForCart"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:paddingLeft="6dp"
                android:text="@string/description_of_cart_item"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="109dp"
                android:layout_height="36dp"
                android:layout_marginTop="165dp"
                android:layout_weight="1"
                android:paddingLeft="6dp"
                android:text="@string/price"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/count"
                android:layout_width="100dp"
                android:layout_height="33dp"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="165dp"
                android:text="@string/count_button"
                android:textColor="@color/blue"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btnRemove"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="195dp"
                android:drawableTop="@drawable/baseline_remove_shopping_cart_24" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
