<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_two"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/lightBlue"
    android:layout_height="match_parent"
    tools:context=".fragments.ProductDetailedFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizantalGuidelineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizantalGuidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizantalGuidelineThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizantalGuidelineFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizantalGuidelineFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizantalGuidelineSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/product_title"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@id/horizantalGuidelineTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizantalGuidelineOne"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/horizantalGuidelineThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizantalGuidelineTwo" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizantalGuidelineThree"
        app:layout_constraintBottom_toTopOf="@id/horizantalGuidelineFour" />
    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizantalGuidelineFour"
        app:layout_constraintBottom_toTopOf="@id/horizantalGuidelineSix" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="406dp"
        android:layout_height="194dp"
        android:text="@string/discription"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@id/horizantalGuidelineFive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizantalGuidelineSix" />

    <Button
        android:id="@+id/btnAddToCart"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:text="@string/add_to_cart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizantalGuidelineFive" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnCart"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/baseline_shopping_cart_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />


</androidx.constraintlayout.widget.ConstraintLayout>